--- a/flaskblog/templates/base.html
+++ b/flaskblog/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Required meta tags -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
@@ -69,6 +70,15 @@
         </div>
       </div>
     </main>
+    <header class="site-header">
+      <nav class="navbar navbar-expand-md navbar-dark bg-steel flex-bottom">
+        <div class="container">
+          <a class="navbar-brand mr-4" href="/"></a>
+          <a class="navbar-brand mr-4" href="/">Copyright (c) [year] [fullname]</a>
+          <a class="navbar-brand mr-4" href="/"></a>
+        </div>
+      </nav>
+    </header>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
